--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
       <li><a target="_blank" href="offer.html">Offer</a></li>
       <li><a target="_blank" href="offer_candidates.html">Offer candidates</a></li>
       <li><a target="_blank" href="offer_confirm_vendor.html">Offer confirm vendor</a></li>
-      <li><a target="_blank" href="deal.html">Deal in work</a></li>
+      <li><a target="_blank" href="offer_vendor.html">Offer Vendor</a></li>
+      <li><a target="_blank" href="deal_in_work.html">Deal in work</a></li>
+      <li><a target="_blank" href="deal_in_progress.html">Deal in progress</a></li>
+      <li><a target="_blank" href="deal_to_verify.html">Deal To Verify</a></li>
+      <li><a target="_blank" href="deal_share.html">Deal share</a></li>
       <li><a target="_blank" href="profile.html">Profile</a></li>
       <li><a target="_blank" href="profile_notification.html">Profile notification</a></li>
+      <li><a target="_blank" href="story.html">Story</a></li>
     </ol>
 
     <h2>Modals</h2>
