--- a/offer_confirm_vendor.html
+++ b/offer_confirm_vendor.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body>
+<body class="">
   <div class="wrapper">
     <form class="page blank-deal form">
       <div class="body blank-deal__body">
@@ -67,7 +67,9 @@
             <div class="input__actions">
               <span class="input__text">Not send yet</span>
               <button class="input__btn" data-path="reward-info" data-animation="fadeInUp">
-                <img class="input__btn-icon" src="./img/svg/info.svg" alt="info">
+                <svg class="input__btn-icon input__btn-icon--info">
+                  <use xlink:href="img/sprite.svg#info"></use>
+                </svg>
               </button>
             </div>
           </div>
@@ -81,8 +83,10 @@
                 <label for="important" class="checkbox__label"><span
                     class="checkbox__label-text">Important</span></label>
               </div>
-              <button class="input__btn" data-path="deadline-info" data-animation="fadeInUp">
-                <img class="input__btn-icon" src="./img/svg/info.svg" alt="info">
+              <button class="input__btn" data-path="reward-info" data-animation="fadeInUp">
+                <svg class="input__btn-icon input__btn-icon--info">
+                  <use xlink:href="img/sprite.svg#info"></use>
+                </svg>
               </button>
             </div>
           </div>
