--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body>
+<body class="">
   <div class="wrapper">
     <div class="page profile ">
       <div class="body profile__body">
