--- a/profile_notification.html
+++ b/profile_notification.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body>
+<body class="">
   <div class="wrapper">
     <div class="page profile ">
       <div class="profile__notification">
