--- a/offer_vendor.html
+++ b/offer_vendor.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body>
+<body class="dark">
   <div class="wrapper">
     <form class="page blank-deal form">
       <div class="body blank-deal__body">
