--- a/offer_candidates.html
+++ b/offer_candidates.html
@@ -46,18 +46,22 @@
             <input class="input__control" id="customer" type="text" name="" value="Кирилл" placeholder="Customer (You)">
             <label class="input__label" for="customer">Customer (You)</label>
           </div>
-          <div class="form__input input">
-            <input class="input__control" id="customer" type="text" name="" value="Choose from 2 candidates" readonly
-              placeholder="">
-            <label class="input__label" for="customer">Vendor</label>
-             <div class="input__actions">
-
-               <button class="input__btn">
+          <div class="form__input form__input input input input-customer">
+            <input id="dropdownInput" class="input__control input__control--customer" type="text" name="" value="" readonly
+              placeholder="Choose from 2 candidates">
+            <label class="input__label" >Vendor</label>
+            <div class="input__actions">
+              <button id="dropdownButton" class="input__btn" >
                 <svg class="input__btn-icon input__btn-icon--arrow">
                   <use xlink:href="img/sprite.svg#arrow"></use>
                 </svg>
-               </button>
-             </div>
+              </button>
+            </div>
+            <ul class="dropdown-customer">
+              <li class="dropdown-customer__item">Вадим Мариупольский</li>
+              <li class="dropdown-customer__item">Олег Мариупольский</li>
+              <li class="dropdown-customer__item">Василий Мариупольский</li>
+            </ul>
           </div>
 
           <div class="form__input input">
@@ -133,53 +137,53 @@
     </form>
   </div>
   </div>
-      <div class="modal">
-        <!-- Reward info -->
-        <div class="modal__container" role="dialog" aria-modal="true" data-target="reward-info">
-          <button type="button" class=" modal__close js-modal-close" aria-label="close modal">
-            <svg class="modal__close-icon">
-              <use xlink:href="img/sprite.svg#close"></use>
-            </svg>
-          </button>
-          <h2 class="modal__title">
-            Reward and Fee
-          </h2>
-          <div class="modal__body">
+  <div class="modal">
+    <!-- Reward info -->
+    <div class="modal__container" role="dialog" aria-modal="true" data-target="reward-info">
+      <button type="button" class=" modal__close js-modal-close" aria-label="close modal">
+        <svg class="modal__close-icon">
+          <use xlink:href="img/sprite.svg#close"></use>
+        </svg>
+      </button>
+      <h2 class="modal__title">
+        Reward and Fee
+      </h2>
+      <div class="modal__body">
 
-            <p class="modal__text"><strong>The reward is managed by a smart contract.</strong>The deal starts when the
-              vendor has confirmed the deal, the customer has
-              selected one vendor from those who have confirmed and transferred the reward to the smart contract.</p>
-            <p class="modal__text">When both agree that the deal is complete, the rewards are transferred to the
-              vendor's
-              account.</p>
-            <p class="modal__text">If disputes arise, an arbitrator (service administrator or expert) decides what to do
-              with the fee: return it to the
-              customer, transfer it to the vendor, split the reward, or put the deal back to work.</p>
-            <p class="modal__text"><strong>Fee</strong>$10 - Flat service fee for any deal <br> 2% min $8 - Non
-              refundable
-              Arbitrage Insurance</p>
-          </div>
-
-        </div>
-
-        <!-- Deadline Info -->
-        <div class="modal__container" role="dialog" aria-modal="true" data-target="deadline-info">
-          <button type="button" class=" modal__close js-modal-close" aria-label="close modal">
-            <svg class="modal__close-icon">
-              <use xlink:href="img/sprite.svg#close"></use>
-            </svg>
-          </button>
-          <h2 class="modal__title">
-            Deadline is important
-          </h2>
-          <div class="modal__body">
-            <p class="modal__text">Missing a deadline may be the cause to cancel the deal with a refund to the customer.
-            </p>
-          </div>
-
-        </div>
-
+        <p class="modal__text"><strong>The reward is managed by a smart contract.</strong>The deal starts when the
+          vendor has confirmed the deal, the customer has
+          selected one vendor from those who have confirmed and transferred the reward to the smart contract.</p>
+        <p class="modal__text">When both agree that the deal is complete, the rewards are transferred to the
+          vendor's
+          account.</p>
+        <p class="modal__text">If disputes arise, an arbitrator (service administrator or expert) decides what to do
+          with the fee: return it to the
+          customer, transfer it to the vendor, split the reward, or put the deal back to work.</p>
+        <p class="modal__text"><strong>Fee</strong>$10 - Flat service fee for any deal <br> 2% min $8 - Non
+          refundable
+          Arbitrage Insurance</p>
       </div>
+
+    </div>
+
+    <!-- Deadline Info -->
+    <div class="modal__container" role="dialog" aria-modal="true" data-target="deadline-info">
+      <button type="button" class=" modal__close js-modal-close" aria-label="close modal">
+        <svg class="modal__close-icon">
+          <use xlink:href="img/sprite.svg#close"></use>
+        </svg>
+      </button>
+      <h2 class="modal__title">
+        Deadline is important
+      </h2>
+      <div class="modal__body">
+        <p class="modal__text">Missing a deadline may be the cause to cancel the deal with a refund to the customer.
+        </p>
+      </div>
+
+    </div>
+
+  </div>
 </body>
 
 </html>
