--- a/offer_candidates.html
+++ b/offer_candidates.html
@@ -38,7 +38,8 @@
           </div>
         </div>
         <div class="form__items">
-          <div class="form__input input input--textarea input--floating">
+          <div class="form__input input input--textarea input--floating error">
+            <span class="error-text">Error </span>
             <textarea class="input__control textarea" name="" id="" placeholder="Deal details"></textarea>
             <label class="input__label" for="customer">Deal details</label>
           </div>
