--- a/deal_new.html
+++ b/deal_new.html
@@ -50,8 +50,9 @@
               placeholder="">
             <label class="input__label" for="customer">Vendor</label>
           </div>
-          <div class="form__input input">
-            <input class="input__control input__control--padding" id="reward" type="text" name="" value=""
+          <div class="form__input input input--reward">
+            <input class="input__control input__control--reward input__control--padding" id="reward" type="text" name=""
+              value="0"
               placeholder="0">
             <label class="input__label" for="reward">Reward</label>
             <div class="input__actions">
