--- a/deals_empty.html
+++ b/deals_empty.html
@@ -30,34 +30,23 @@
         <ul class="deals__stories stories">
           <li class="stories__item">
             <a href="#" class="stories__link">
-              <img src="./img/stories/01.jpg" alt="" class="stories__image">
+              <img src="./img/covers/01.svg" alt="" class="stories__image">
               <div class="stories__overlay">Как работает безопасная сделка</div>
             </a>
           </li>
           <li class="stories__item">
             <a href="#" class="stories__link">
-              <img src="./img/stories/02.jpg" alt="" class="stories__image">
+              <img src="./img/covers/02.svg" alt="" class="stories__image">
               <div class="stories__overlay">Спорные моменты в ходе сделки</div>
             </a>
           </li>
           <li class="stories__item">
             <a href="#" class="stories__link">
-              <img src="./img/stories/03.jpg" alt="" class="stories__image">
-              <div class="stories__overlay">Какая комиссия у приложения</div>
+              <img src="./img/covers/03.svg" alt="" class="stories__image">
+              <div class="stories__overlay">Как оплатить сделку криптовалютой</div>
             </a>
           </li>
-          <li class="stories__item">
-            <a href="#" class="stories__link">
-              <img src="./img/stories/01.jpg" alt="" class="stories__image">
-              <div class="stories__overlay">Как работает безопасная сделка</div>
-            </a>
-          </li>
-          <li class="stories__item">
-            <a href="#" class="stories__link">
-              <img src="./img/stories/02.jpg" alt="" class="stories__image">
-              <div class="stories__overlay">Спорные моменты в ходе сделки</div>
-            </a>
-          </li>
+
         </ul>
         <div class="deals__cards cards">
           <div class="cards__body cards__body--empty">
