--- a/index.html
+++ b/index.html
@@ -30,7 +30,22 @@
       <li><a target="_blank" href="deal_share.html">Deal share</a></li>
       <li><a target="_blank" href="profile.html">Profile</a></li>
       <li><a target="_blank" href="profile_notification.html">Profile notification</a></li>
-      <li><a target="_blank" href="story.html">Story</a></li>
+      <li><a target="_blank" href="story1_1.html">Story 1.1</a></li>
+      <li><a target="_blank" href="story1_2.html">Story 1.2</a></li>
+      <li><a target="_blank" href="story1_3.html">Story 1.3</a></li>
+      <li><a target="_blank" href="story1_4.html">Story 1.4</a></li>
+      <li><a target="_blank" href="story1_5.html">Story 1.5</a></li>
+      <li><a target="_blank" href="story2_1.html">Story 2.1</a></li>
+      <li><a target="_blank" href="story2_2.html">Story 2.2</a></li>
+      <li><a target="_blank" href="story2_3.html">Story 2.3</a></li>
+      <li><a target="_blank" href="story2_4.html">Story 2.4</a></li>
+      <li><a target="_blank" href="story2_5.html">Story 2.5</a></li>
+      <li><a target="_blank" href="story3_1.html">Story 3.1</a></li>
+      <li><a target="_blank" href="story3_2.html">Story 3.2</a></li>
+      <li><a target="_blank" href="story3_3.html">Story 3.3</a></li>
+      <li><a target="_blank" href="story3_4.html">Story 3.4</a></li>
+      <li><a target="_blank" href="story3_5.html">Story 3.5</a></li>
+      <li><a target="_blank" href="story3_6.html">Story 3.6</a></li>
     </ol>
 
     <h2>Modals</h2>
